# Scheduler

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: agent_auditor.yml  ci.yml
docs/: API.md  ARCHITECTURE.md  DECISIONS.md  ROADMAP.md  STATUS.md  VISION.md
examples/: demo.py
scripts/: lint.sh  run_agent_audit.py
src/scheduler/: __init__.py  main.py
src/scheduler/agent/: __init__.py  orchestrator.py  schema.py  worker.py
src/scheduler/api/: __init__.py  auth.py  health.py  heartbeat.py  ingress.py  nodes.py  schedule.py
src/scheduler/clients/: __init__.py
src/scheduler/core/: __init__.py  config.py  consensus.py  engine.py  logging.py  matchmaker.py  rate_limiter.py  strategy.py  transport.py  zenoh_router.py
src/scheduler/models/: __init__.py  health.py  heartbeat.py  node.py
src/scheduler/registry/: __init__.py  node_registry.py
src/scheduler/scheduler/: __init__.py  algorithm.py
tests/: conftest.py  test_consensus.py  test_ingress_gateway.py  test_multiagent_engine.py  test_scheduler_engine.py  test_transport.py  test_zenoh_integration.py
tests/api/: test_auth.py  test_heartbeat.py  test_nodes.py  test_schedule.py
tests/test_models/: __init__.py  test_heartbeat.py  test_node.py
tests/test_registry/: __init__.py  test_node_registry.py
tests/test_scheduler/: __init__.py  test_algorithm.py
